# tree-sitter-tiger

./: .clang-format  .drone.yml  .gitignore  Cargo.toml  Makefile  README.md  binding.gyp  flake.nix  grammar.js  package.json
.woodpecker/: check.yml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
queries/: folds.scm  highlights.scm  indents.scm  locals.scm  tags.scm  textobjects.scm
scripts/: minimal_init.lua
src/: grammar.json  node-types.json  parser.c  scanner.c
test/: indent_spec.lua
test/corpus/: arithmetic.txt  comments.txt  control_flow.txt  declarations.txt  expressions.txt  identifiers.txt  let-expressions.txt  literals.txt  lvalues.txt  meta-variables.txt  object-oriented.txt  regressions.txt
test/highlight/: built-ins.tig  functions.tig  identifiers.tig  imports.tig  keywords.tig  literals.tig  object-oriented.tig  operators.tig
test/indent/: values-and-expressions.tig
test/tags/: classes.tig  functions.tig  methods.tig
