[package]
name = "tree-sitter-tiger"
description = "Tiger grammar for the tree-sitter parsing library"
version = "0.1.2"
keywords = ["incremental", "parsing", "tiger"]
categories = ["parsing", "text-editors"]
repository = "https://gitea.belanyi.fr/ambroisie/tree-sitter-tiger"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
